# sanofi_internship_test

./: README.md  display.ipynb  pyproject.toml  simulation_tools.py  utils.py
data/: PATIENTS.pkl
metrics/: kt_0_gs_16_hl_10.pkl  kt_0_gs_16_hl_2.pkl  kt_0_gs_16_hl_20.pkl  kt_0_gs_32_hl_10.pkl  kt_0_gs_32_hl_2.pkl  kt_0_gs_32_hl_20.pkl  kt_0_gs_8_hl_10.pkl  kt_0_gs_8_hl_2.pkl  kt_0_gs_8_hl_20.pkl  kt_1_gs_16_hl_10.pkl  kt_1_gs_16_hl_2.pkl  kt_1_gs_16_hl_20.pkl  kt_1_gs_32_hl_10.pkl  kt_1_gs_32_hl_2.pkl  kt_1_gs_32_hl_20.pkl  kt_1_gs_8_hl_10.pkl  kt_1_gs_8_hl_2.pkl  kt_1_gs_8_hl_20.pkl
models/: best_model_concentration.pth  best_model_effect.pth  config.pkl  kt_0_gs_16_hl_10.pth  kt_0_gs_16_hl_2.pth  kt_0_gs_16_hl_20.pth  kt_0_gs_32_hl_10.pth  kt_0_gs_32_hl_2.pth  kt_0_gs_32_hl_20.pth  kt_0_gs_8_hl_10.pth  kt_0_gs_8_hl_2.pth  kt_0_gs_8_hl_20.pth  kt_1_gs_16_hl_10.pth  kt_1_gs_16_hl_2.pth  kt_1_gs_16_hl_20.pth  kt_1_gs_32_hl_10.pth  kt_1_gs_32_hl_2.pth  kt_1_gs_32_hl_20.pth  kt_1_gs_8_hl_10.pth  kt_1_gs_8_hl_2.pth  kt_1_gs_8_hl_20.pth
src/: models.py
